--- a/index.html
+++ b/index.html
@@ -20,23 +20,21 @@
             <img src="./images/logo.svg" alt="Spot logo" class="header__logo">
         </header>
         <main class="content">
-            <section class="profile section--profile">
+            <section class="profile page__section">
                 <img src="./images/avatar.jpg" alt="Bessie Coleman" class="profile__avatar">
 
                 <div class="profile__column">
                     <h1 class="profile__name">Bessie Coleman</h1>
                     <p class="profile__description">Civil Aviator</p>
-                    <a href="#" class="profile__edit-btn"> <img src="./images/pencil.svg" alt="pencil icon"> Edit
-                        Profile</a>
-                    <!-- <button type="button" class="profile__edit-btn">
+                    <button type="button" class="profile__edit-btn">
                         <img src="./images/pencil.svg" alt="pencil icon"> Edit Profile
-                    </button> -->
+                    </button>
                 </div>
                 <button type="button" class="profile__add-btn">
                     <img src="./images/plus.svg" alt="plus icon"> New Post
                 </button>
             </section>
-            <section class="cards section--profile">
+            <section class="cards page__section">
                 <ul class="cards__list">
                     <li class="card">
                         <img src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="val thorens"
@@ -91,9 +89,9 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="footer__container">
-                <p class="footer__text">2023 &copy; Spots</p>
-            </div>
+
+            <p class="footer__text">2023 &copy; Spots</p>
+
         </footer>
     </div>
 
