--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         </footer>
         <div class="modal" id="edit-modal">
-            <div class="modal__container">
+            <div class="modal__content">
                 <button type="submit" class="modal__close-btn">
                     <img src="./images/close.svg" alt="close icon">
                 </button>
@@ -66,9 +66,9 @@
                         name
                         <input id="profile-name-input" type="text" class="modal__input" placeholder="name">
                     </label>
-                    <label for="profile-description-input" class="modal__label">
+                    <label for="profile-description-input" name="name" class="modal__label">
                         Description
-                        <input id="profile-description-input" type="text" class="modal__input"
+                        <input id="profile-description-input" name="description" type="text" class="modal__input"
                             placeholder="describe yourself">
                     </label>
                     <button type="submit" class="modal__submit-btn">Save</button>
@@ -77,7 +77,42 @@
             </div>
 
         </div>
+
+        <div class="modal" id="add-card-modal">
+            <div class="modal__content">
+                <button type="submit" class="modal__close-btn">
+                    <img src="./images/close.svg" alt="close icon">
+                </button>
+                <h2 class="modal__title">New post</h2>
+                <form class="modal__form" name="edit-profile" id="add-card-form">
+                    <label for="add-card-link-input" class="modal__label">
+                        Image link
+                        <input id="add-card-link-input" type="url" name="link" class="modal__input"
+                            placeholder="Paste a link to the picture">
+                    </label>
+                    <label for="add-card-name-input" class="modal__label">
+                        Caption
+                        <input id="add-card-name-input" type="text" class="modal__input" name="name"
+                            placeholder="Type your caption">
+                    </label>
+                    <button type="submit" class="modal__submit-btn">Save</button>
+
+                </form>
+            </div>
+
+        </div>
     </div>
+    <div class="modal" id="preview-modal">
+        <div class="modal__content modal__content_type_preview">
+            <button aria-label="close modal" class="modal__close-btn modal__close-btn_type_preview"
+                type="button"></button>
+            <img class="modal__image" src="" alt="" />
+            <p class="modal__caption"></p>
+
+        </div>
+
+    </div>
+
     <script defer src="./scripts/index.js"></script>
 </body>
 
