--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                             <img src="" alt="" class="card__image">
                             <div class="card__content">
                                 <h2 class="card__title"></h2>
-                                <button type="button" class="card__like-btn"></button>
+                                <button class="card__like-btn" type="button"></button>
+                                <button class="card__delete-btn" type="button"></button>
                             </div>
                         </li>
 
@@ -57,19 +58,22 @@
         </footer>
         <div class="modal" id="edit-modal">
             <div class="modal__content">
-                <button type="submit" class="modal__close-btn">
+                <button type="button" class="modal__close-btn">
                     <img src="./images/close.svg" alt="close icon">
                 </button>
                 <h2 class="modal__title">Edit profile</h2>
-                <form name="edit-profile" class="modal__form">
+                <form name="edit-profile" class="modal__form" novalidate>
                     <label for="profile-name-input" class="modal__label">
                         name
-                        <input id="profile-name-input" type="text" class="modal__input" placeholder="name">
+                        <input id="profile-name-input" type="text" minlength="2" maxlength="40" class="modal__input"
+                            placeholder="name">
+                        <span class="modal__error" id="profile-name-input-error"></span>
                     </label>
-                    <label for="profile-description-input" name="name" class="modal__label">
+                    <label for="profile-description-input" class="modal__label">
                         Description
-                        <input id="profile-description-input" name="description" type="text" class="modal__input"
-                            placeholder="describe yourself">
+                        <input id="profile-description-input" minlength="2" maxlength="200" name="description"
+                            type="text" class="modal__input" placeholder="describe yourself">
+                        <span class="modal__error" id="profile-description-input-error"></span>
                     </label>
                     <button type="submit" class="modal__submit-btn">Save</button>
 
@@ -80,22 +84,24 @@
 
         <div class="modal" id="add-card-modal">
             <div class="modal__content">
-                <button type="submit" class="modal__close-btn">
+                <button type="button" class="modal__close-btn">
                     <img src="./images/close.svg" alt="close icon">
                 </button>
                 <h2 class="modal__title">New post</h2>
-                <form class="modal__form" name="edit-profile" id="add-card-form">
+                <form class="modal__form" name="edit-profile" id="add-card-form" novalidate>
                     <label for="add-card-link-input" class="modal__label">
                         Image link
-                        <input id="add-card-link-input" type="url" name="link" class="modal__input"
-                            placeholder="Paste a link to the picture">
+                        <input id="add-card-link-input" type="url" name="link"
+                            class="modal__input modal__input_type_error" placeholder="Paste a link to the picture">
+                        <span class="modal__error" id="add-card-link-input-error"></span>
                     </label>
                     <label for="add-card-name-input" class="modal__label">
                         Caption
-                        <input id="add-card-name-input" type="text" class="modal__input" name="name"
-                            placeholder="Type your caption">
+                        <input id="add-card-name-input" type="text" class="modal__input" name="name" minlength="2"
+                            maxlength="30" placeholder="Type your caption">
+                        <span class="modal__error" id="add-card-name-input-error"></span>
                     </label>
-                    <button type="submit" class="modal__submit-btn">Save</button>
+                    <button type="submit" class="modal__submit-btn modal__submit-btn_disabled">Save</button>
 
                 </form>
             </div>
@@ -106,7 +112,7 @@
         <div class="modal__content modal__content_type_preview">
             <button aria-label="close modal" class="modal__close-btn modal__close-btn_type_preview"
                 type="button"></button>
-            <img class="modal__image" src="" alt="" />
+            <img class="modal__image" src="#" alt="Placeholder" />
             <p class="modal__caption"></p>
 
         </div>
@@ -114,6 +120,7 @@
     </div>
 
     <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
 </body>
 
 </html>
