--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <form class="modal__form" name="edit-profile" id="add-card-form" novalidate>
                     <label for="add-card-link-input" class="modal__label">
                         Image link
-                        <input id="add-card-link-input" type="url" name="link"
-                            class="modal__input modal__input_type_error" placeholder="Paste a link to the picture">
+                        <input id="add-card-link-input" type="url" name="link" class="modal__input"
+                            placeholder="Paste a link to the picture">
                         <span class="modal__error" id="add-card-link-input-error"></span>
                     </label>
                     <label for="add-card-name-input" class="modal__label">
